--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,27 +15,27 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.3.5-beta</PackageVersion>
+    <PackageVersion>0.1.3.8-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
-    <PackageProjectUrl></PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
     <PackageIconUrl></PackageIconUrl>
-    <RepositoryUrl></RepositoryUrl>
+    <RepositoryUrl>https://github.com/cpsusie/DotNetVault</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Description>DotNetVault is a library and static code analysis tool that makes managing shared mutable state in multi-threaded applications more manageable and less error prone. Where errors do still occur, they are easier to locate and identify.
 
 A full project description is included in "DotNetVault Description.pdf".</Description>
-    <PackageReleaseNotes>Initial beta release</PackageReleaseNotes>
+    <PackageReleaseNotes>Bug # 50 Fix: The assignment target of a method the return value of which has the UsingMandatoryAttribute now must be declared inline in the using statement.  Documentation updated to reflect.  Added metadata to NuGet package including references to the project's GitHub repository.  Unit test "TestOutOfLineDeclarationCausesDiagnostic" added to validate bug fix.</PackageReleaseNotes>
     <Copyright>Copyright © 2019 CJM Screws, LLC</Copyright>
-    <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe</PackageTags>
+    <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.3.5</Version>
+    <Version>0.1.3.8</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.3.5</AssemblyVersion>
-    <FileVersion>0.1.3.5</FileVersion>
+    <AssemblyVersion>0.1.3.8</AssemblyVersion>
+    <FileVersion>0.1.3.8</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -57,8 +57,11 @@ A full project description is included in "DotNetVault Description.pdf".</Descri
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
     <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="bin\**" />
     <EmbeddedResource Remove="Resources\**" />
+    <None Remove="bin\**" />
     <None Remove="Resources\**" />
     <None Include="..\license.txt">
       <Pack>True</Pack>
@@ -93,8 +96,6 @@ A full project description is included in "DotNetVault Description.pdf".</Descri
 
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
-    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
-    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
   </ItemGroup>
 
   <ItemGroup>
