--- a/ConsoleStressTest/ConsoleStressTest.csproj
+++ b/ConsoleStressTest/ConsoleStressTest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
@@ -8,18 +8,12 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotNetVault" Version="0.1.3.11-beta" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\LaundryMachineUi\LaundryMachineUi.csproj" />
-    <ProjectReference Include="..\LaundryMachine\LaundryMachine.csproj" />
   </ItemGroup>
 
 </Project>
