--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.3.8-beta</PackageVersion>
+    <PackageVersion>0.1.3.11-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -25,17 +25,23 @@
     <Description>DotNetVault is a library and static code analysis tool that makes managing shared mutable state in multi-threaded applications more manageable and less error prone. Where errors do still occur, they are easier to locate and identify.
 
 A full project description is included in "DotNetVault Description.pdf".</Description>
-    <PackageReleaseNotes>Bug # 50 Fix: The assignment target of a method the return value of which has the UsingMandatoryAttribute now must be declared inline in the using statement.  Documentation updated to reflect.  Added metadata to NuGet package including references to the project's GitHub repository.  Unit test "TestOutOfLineDeclarationCausesDiagnostic" added to validate bug fix.</PackageReleaseNotes>
+    <PackageReleaseNotes>NOTES VERSION 0.1.3.11:
+ 
+   Added Console Stress Test utility to allow stress test without access to WPF and to provide simplified starting point for future quick start guide.  Updated "DotNetVault Description.pdf" so that the changes made in 1.3.8 release are reflected in the documentation.
+
+NOTES VERSION 0.1.3.8:
+
+Bug # 50 Fix: The assignment target of a method the return value of which has the UsingMandatoryAttribute now must be declared inline in the using statement.  Documentation updated to reflect.  Added metadata to NuGet package including references to the project's GitHub repository.  Unit test "TestOutOfLineDeclarationCausesDiagnostic" added to validate bug fix.</PackageReleaseNotes>
     <Copyright>Copyright © 2019 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.3.8</Version>
+    <Version>0.1.3.11</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.3.8</AssemblyVersion>
-    <FileVersion>0.1.3.8</FileVersion>
+    <AssemblyVersion>0.1.3.11</AssemblyVersion>
+    <FileVersion>0.1.3.11</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -96,6 +102,8 @@ A full project description is included in "DotNetVault Description.pdf".</Descri
 
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
   </ItemGroup>
 
   <ItemGroup>
