--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.3.11-beta</PackageVersion>
+    <PackageVersion>0.1.3.13-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -25,7 +25,16 @@
     <Description>DotNetVault is a library and static code analysis tool that makes managing shared mutable state in multi-threaded applications more manageable and less error prone. Where errors do still occur, they are easier to locate and identify.
 
 A full project description is included in "DotNetVault Description.pdf".</Description>
-    <PackageReleaseNotes>NOTES VERSION 0.1.3.11:
+    <PackageReleaseNotes>NOTES VERSION 0.1.3.13:
+
+     Fixed two flaws in the ConsoleStressTest.  
+     The default ordering comparer for stress test logic now considers ThreadId, then Action Number, then TimeStamp, then Text. 
+
+   It now takes linearithmic rather than quadratic time to process and validate the results of the Console Stress test.
+
+   Added a table of know flaws and issues to the pdf documentation.  Code examples shown for these flaws now appear in the ExampleCodePlayground as well.
+
+NOTES VERSION 0.1.3.11:
  
    Added Console Stress Test utility to allow stress test without access to WPF and to provide simplified starting point for future quick start guide.  Updated "DotNetVault Description.pdf" so that the changes made in 1.3.8 release are reflected in the documentation.
 
@@ -36,12 +45,12 @@ Bug # 50 Fix: The assignment target of a method the return value of which has th
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.3.11</Version>
+    <Version>0.1.3.13</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.3.11</AssemblyVersion>
-    <FileVersion>0.1.3.11</FileVersion>
+    <AssemblyVersion>0.1.3.13</AssemblyVersion>
+    <FileVersion>0.1.3.13</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
