--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.3.13-beta</PackageVersion>
+    <PackageVersion>0.1.4.0-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -25,32 +25,47 @@
     <Description>DotNetVault is a library and static code analysis tool that makes managing shared mutable state in multi-threaded applications more manageable and less error prone. Where errors do still occur, they are easier to locate and identify.
 
 A full project description is included in "DotNetVault Description.pdf".</Description>
-    <PackageReleaseNotes>NOTES VERSION 0.1.3.13:
+    <PackageReleaseNotes>RELEASE NOTES VERSION 0.1.4.0:
+    
+    Bug# 61 FIXED.  Double dispose is now practically impossible.  Analyzer now forbids out of line, pre-declaration of a variable that will be the subject of a using statement or declaration.  Analysis rules now prevent manual calls to Dispose method and additional method and analysis rules were added to account for the two use-cases where manual release of protected resource is necessary.  These rules make it difficult to accidentally use the new manual release method accidentally.
 
-     Fixed two flaws in the ConsoleStressTest.  
-     The default ordering comparer for stress test logic now considers ThreadId, then Action Number, then TimeStamp, then Text. 
+    Bug# 62 FIXED.  Analysis now considers call of extension method using extension method syntax to be equivalent to a call thereto using static syntax.
 
-   It now takes linearithmic rather than quadratic time to process and validate the results of the Console Stress test.
+    Bug# 48 Fields in base classes were not being considered in vault safety analysis.  An otherwise fine sealed class could be considered vault safe despite fields in a base clase violating vault-safety rules.
+    
+    Bug# 48 FIXED.  Analyzer now considers all fields from base classes when performing vault-safety analysis.  If a base class has field that, if present in sealed derived class being analyzed for vault-safety, would prevent the sealed derived class from being considered vault-safe, the sealed derived class will not be considered vault-safe.  A derived class, however, will not be considered not vault-safe MERELY because it inherits from a base class.  This change to the analyzer, does not, however, permit the base classes themselves to be used in a vault-safe context.
 
-   Added a table of know flaws and issues to the pdf documentation.  Code examples shown for these flaws now appear in the ExampleCodePlayground as well.
+    Laundry machine simulation can go significantly more quickly now.  With parameters of 1, 2, and 3 milliseconds and 200 laundry articles, the test completes on my pc in less than two minutes.  It no longer sleeps during task simulation if the timespan parameters entered are small enough that the sleeping will cause the tasks to take much longer than the parameters specified.  
 
-NOTES VERSION 0.1.3.11:
- 
-   Added Console Stress Test utility to allow stress test without access to WPF and to provide simplified starting point for future quick start guide.  Updated "DotNetVault Description.pdf" so that the changes made in 1.3.8 release are reflected in the documentation.
+    A few convenience-based changes were made to the LaundryMachine simulation and the ConsoleStressTest.  Code in the ExampleCodePlayground, ConsoleStressTest and LaundryStessTest projects was updated to comply with new analysis rules as needed.
 
-NOTES VERSION 0.1.3.8:
+    The console stress test now outputs whether the time stamps it gathers are based on a high precision timer or not.
 
-Bug # 50 Fix: The assignment target of a method the return value of which has the UsingMandatoryAttribute now must be declared inline in the using statement.  Documentation updated to reflect.  Added metadata to NuGet package including references to the project's GitHub repository.  Unit test "TestOutOfLineDeclarationCausesDiagnostic" added to validate bug fix.</PackageReleaseNotes>
+    Unit tests were added to the unit test project that validate the new analyis rules.
+
+    The pdf documentation was edited and updated based on the foregoing changes.
+
+    Xml Doc Comments for DotNetVault analyzer/library are now included in the NuGet package.
+
+RELEASE NOTES VERSION 0.1.3.13:
+
+    Fixed two flaws in the ConsoleStressTest.  
+    The default ordering comparer for stress test logic now considers ThreadId, then Action Number, then TimeStamp, then Text. 
+
+    It now takes linearithmic rather than quadratic time to process and validate the results of the Console Stress test.
+
+    Added a table of know flaws and issues to the pdf documentation.  Code examples shown for these flaws now appear in the ExampleCodePlayground as well.
+</PackageReleaseNotes>
     <Copyright>Copyright © 2019 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.3.13</Version>
+    <Version>0.1.4.0</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.3.13</AssemblyVersion>
-    <FileVersion>0.1.3.13</FileVersion>
+    <AssemblyVersion>0.1.4.0</AssemblyVersion>
+    <FileVersion>0.1.4.0</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -84,13 +99,11 @@ Bug # 50 Fix: The assignment target of a method the return value of which has th
     </None>
   </ItemGroup>
 
-  <ItemGroup>
-    <None Remove="VaultSafeWhiteList.txt" />
-  </ItemGroup>
-
+ 
   <ItemGroup>
     <AdditionalFiles Include="VaultSafeWhiteList.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Pack>True</Pack>
     </AdditionalFiles>
   </ItemGroup>
 
@@ -113,6 +126,8 @@ Bug # 50 Fix: The assignment target of a method the return value of which has th
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
+    <None Include="$(OutputPath)\$(AssemblyName).xml" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
+    <None Include="$(OutputPath)\$(AssemblyName).xml" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
   </ItemGroup>
 
   <ItemGroup>
