--- a/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
+++ b/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
@@ -14,12 +14,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.1.3.13-beta" />
+    <PackageReference Include="DotNetVault" Version="0.1.4-beta" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LaundryMachineUi\LaundryMachineUi.csproj" />
-    <ProjectReference Include="..\LaundryMachine\LaundryMachine.csproj" />
+    <ProjectReference Include="..\LaundryMachine\LaundryMachine.csproj">
+      <IncludeAssets>analyzers</IncludeAssets>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
