--- a/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
+++ b/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
@@ -13,7 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="~%24tNetVault Quick Start Guide.docx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DotNetVault" Version="0.1.4.1-beta" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="0.0.1-alpha" />
   </ItemGroup>
 
 </Project>
