--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.4.1-beta</PackageVersion>
+    <PackageVersion>0.1.4.2-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -28,7 +28,13 @@
 A full project description is included in "DotNetVault Description.pdf".  Source code, example projects, unit tests, stress test and quick start guide on GitHub.
       
     </Description>
-    <PackageReleaseNotes>RELEASE NOTES VERSION 0.1.4.1:
+    <PackageReleaseNotes>RELEASE NOTES VERSION 0.1.4.2:
+
+    Added quick start guide pdf for Linux (project available on GitHub)
+
+    Upated quick start guide pdf for Windows (project available on GitHub)
+
+RELEASE NOTES VERSION 0.1.4.1:
 	
 	Added quick start guide pdf and project (project available on GitHub).
 
@@ -69,12 +75,12 @@ RELEASE NOTES VERSION 0.1.3.13:
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.4.1</Version>
+    <Version>0.1.4.2</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.4.1</AssemblyVersion>
-    <FileVersion>0.1.4.1</FileVersion>
+    <AssemblyVersion>0.1.4.2</AssemblyVersion>
+    <FileVersion>0.1.4.2</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -151,6 +157,11 @@ RELEASE NOTES VERSION 0.1.3.13:
       <Visible>True</Visible>
     </None>
     <None Update="DotNetVault Quick Start Guide Windows Vs 2019.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Pack>True</Pack>
+      <Visible>True</Visible>
+    </None>
+    <None Update="DotNetVault Quick Start Guide Linux Rider 2019.3.1 -- (Amazon Linux).pdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
       <Visible>True</Visible>
