--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.4.2-beta</PackageVersion>
+    <PackageVersion>0.1.5.0</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -28,59 +28,57 @@
 A full project description is included in "DotNetVault Description.pdf".  Source code, example projects, unit tests, stress test and quick start guide on GitHub.
       
     </Description>
-    <PackageReleaseNotes>RELEASE NOTES VERSION 0.1.4.2:
+    <PackageReleaseNotes>
+      RELEASE NOTES VERSION 0.1.5.0:
 
-    Added quick start guide pdf for Linux (project available on GitHub)
+      This is the first release not explicitly marked beta or alpha.  This is currently a one-person project produced outside of work hours.  It is almost certainly not bug-free or without flaws, but it has been used extensively enough in the test projects to prove itself useful in managing shared mutable state in complex concurrent state machine scenarios.  I am confident that it will prove useful, despite any residual bugs and flaws.  You should not expect bug free or flawless conformance to specifications.  It will prove, however, far more useful than problematic.  Please report bugs or feature requests.
 
-    Upated quick start guide pdf for Windows (project available on GitHub)
+      Updated Project Description PDF.  Updated README.md.
 
-RELEASE NOTES VERSION 0.1.4.1:
-	
-	Added quick start guide pdf and project (project available on GitHub).
+      RELEASE NOTES VERSION 0.1.4.2:
 
-	Updated readme.md
-  
-RELEASE NOTES VERSION 0.1.4.0:
-    
-    Bug# 61 FIXED.  Double dispose is now practically impossible.  Analyzer now forbids out of line, pre-declaration of a variable that will be the subject of a using statement or declaration.  Analysis rules now prevent manual calls to Dispose method and additional method and analysis rules were added to account for the two use-cases where manual release of protected resource is necessary.  These rules make it difficult to accidentally use the new manual release method accidentally.
+      Added quick start guide pdf for Linux (project available on GitHub)
 
-    Bug# 62 FIXED.  Analysis now considers call of extension method using extension method syntax to be equivalent to a call thereto using static syntax.
+      Upated quick start guide pdf for Windows (project available on GitHub)
 
-    Bug# 48 Fields in base classes were not being considered in vault safety analysis.  An otherwise fine sealed class could be considered vault safe despite fields in a base clase violating vault-safety rules.
-    
-    Bug# 48 FIXED.  Analyzer now considers all fields from base classes when performing vault-safety analysis.  If a base class has field that, if present in sealed derived class being analyzed for vault-safety, would prevent the sealed derived class from being considered vault-safe, the sealed derived class will not be considered vault-safe.  A derived class, however, will not be considered not vault-safe MERELY because it inherits from a base class.  This change to the analyzer, does not, however, permit the base classes themselves to be used in a vault-safe context.
+      RELEASE NOTES VERSION 0.1.4.1:
 
-    Laundry machine simulation can go significantly more quickly now.  With parameters of 1, 2, and 3 milliseconds and 200 laundry articles, the test completes on my pc in less than two minutes.  It no longer sleeps during task simulation if the timespan parameters entered are small enough that the sleeping will cause the tasks to take much longer than the parameters specified.  
+      Added quick start guide pdf and project (project available on GitHub).
 
-    A few convenience-based changes were made to the LaundryMachine simulation and the ConsoleStressTest.  Code in the ExampleCodePlayground, ConsoleStressTest and LaundryStessTest projects was updated to comply with new analysis rules as needed.
+      Updated readme.md
 
-    The console stress test now outputs whether the time stamps it gathers are based on a high precision timer or not.
+      RELEASE NOTES VERSION 0.1.4.0:
 
-    Unit tests were added to the unit test project that validate the new analyis rules.
+      Bug# 61 FIXED.  Double dispose is now practically impossible.  Analyzer now forbids out of line, pre-declaration of a variable that will be the subject of a using statement or declaration.  Analysis rules now prevent manual calls to Dispose method and additional method and analysis rules were added to account for the two use-cases where manual release of protected resource is necessary.  These rules make it difficult to accidentally use the new manual release method accidentally.
 
-    The pdf documentation was edited and updated based on the foregoing changes.
+      Bug# 62 FIXED.  Analysis now considers call of extension method using extension method syntax to be equivalent to a call thereto using static syntax.
 
-    Xml Doc Comments for DotNetVault analyzer/library are now included in the NuGet package.
+      Bug# 48 Fields in base classes were not being considered in vault safety analysis.  An otherwise fine sealed class could be considered vault safe despite fields in a base clase violating vault-safety rules.
 
-RELEASE NOTES VERSION 0.1.3.13:
+      Bug# 48 FIXED.  Analyzer now considers all fields from base classes when performing vault-safety analysis.  If a base class has field that, if present in sealed derived class being analyzed for vault-safety, would prevent the sealed derived class from being considered vault-safe, the sealed derived class will not be considered vault-safe.  A derived class, however, will not be considered not vault-safe MERELY because it inherits from a base class.  This change to the analyzer, does not, however, permit the base classes themselves to be used in a vault-safe context.
 
-    Fixed two flaws in the ConsoleStressTest.  
-    The default ordering comparer for stress test logic now considers ThreadId, then Action Number, then TimeStamp, then Text. 
+      Laundry machine simulation can go significantly more quickly now.  With parameters of 1, 2, and 3 milliseconds and 200 laundry articles, the test completes on my pc in less than two minutes.  It no longer sleeps during task simulation if the timespan parameters entered are small enough that the sleeping will cause the tasks to take much longer than the parameters specified.
 
-    It now takes linearithmic rather than quadratic time to process and validate the results of the Console Stress test.
+      A few convenience-based changes were made to the LaundryMachine simulation and the ConsoleStressTest.  Code in the ExampleCodePlayground, ConsoleStressTest and LaundryStessTest projects was updated to comply with new analysis rules as needed.
 
-    Added a table of know flaws and issues to the pdf documentation.  Code examples shown for these flaws now appear in the ExampleCodePlayground as well.
+      The console stress test now outputs whether the time stamps it gathers are based on a high precision timer or not.
+
+      Unit tests were added to the unit test project that validate the new analyis rules.
+
+      The pdf documentation was edited and updated based on the foregoing changes.
+
+      Xml Doc Comments for DotNetVault analyzer/library are now included in the NuGet package.
 </PackageReleaseNotes>
     <Copyright>Copyright © 2019 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.4.2</Version>
+    <Version>0.1.5.0</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.4.2</AssemblyVersion>
-    <FileVersion>0.1.4.2</FileVersion>
+    <AssemblyVersion>0.1.5.0</AssemblyVersion>
+    <FileVersion>0.1.5.0</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -144,14 +142,13 @@ RELEASE NOTES VERSION 0.1.3.13:
     <None Include="$(OutputPath)\$(AssemblyName).xml" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
     <None Include="$(OutputPath)\$(AssemblyName).xml" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
   </ItemGroup>
-
   <ItemGroup>
-    <None Update="DotNetVault Description.pdf">
+    <None Update="license.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
       <Visible>True</Visible>
     </None>
-    <None Update="license.txt">
+    <None Update="DotNetVault Description version 0.1.5.0.pdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
       <Visible>True</Visible>
