--- a/ExampleLaundryMachine/LaundryMachineUi/LaundryMachineUi.csproj
+++ b/ExampleLaundryMachine/LaundryMachineUi/LaundryMachineUi.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.1.4.2-beta" />
+    <PackageReference Include="DotNetVault" Version="0.1.5" />
   </ItemGroup>
 
   <ItemGroup>
