--- a/ExampleCodePlayground/ExampleCodePlayground.csproj
+++ b/ExampleCodePlayground/ExampleCodePlayground.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.1.5.2" />
+    <PackageReference Include="DotNetVault" Version="0.2.0.2-alpha" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
   </ItemGroup>
 </Project>
