--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.1.5.2</PackageVersion>
+    <PackageVersion>0.1.5.4</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -29,28 +29,34 @@ A full project description is included in "DotNetVault Description.pdf".  Source
       
     </Description>
     <PackageReleaseNotes>
-RELEASE NOTES VERSION 0.1.5.2:
+      RELEASE NOTES VERSION 0.1.5.4:
 
-    Fixed Bug 64.  Structs with fields containing immutable reference types as fields were being incorrectly identified as not being vault-safe when those fields were not read-only.  Since structs are value types and the type field is immutable, there is no danger of a data race when one retains a copy of such a protected resource after releasing a lock.  The analyzer was fixed to account for this.  Unit tests were added to confirm the fix and detect future regressions on this issue.  The Project description was updated to reflect this fix and explain Bug 64.
+      Fixed Bug 76.  Illegal references to non-vault-safe types inside mutable vault's locked resource objects delegates where not being detected in the case of local functions or using anonymous function syntax.  (Lambda syntax and regular method syntax worked fine, still does).  This was corrected.  Unit tests added to verify fix and prevent regressions.  Example code added to playground.  Documentation updated to reflect.  
 
-    Updated Project Description PDF.  Updated README.md.
+      Updated Project Description PDF.  Updated README.md.
+      
+      RELEASE NOTES VERSION 0.1.5.2:
 
-RELEASE NOTES VERSION 0.1.5.0:
-  
-    This is the first release not explicitly marked beta or alpha.  This is currently a one-person project produced outside of work hours.  It is almost certainly not bug-free or without flaws, but it has been used extensively enough in the test projects to prove itself useful in managing shared mutable state in complex concurrent state machine scenarios.  I am confident that it will prove useful, despite any residual bugs and flaws.  You should not expect bug free or flawless conformance to specifications.  It will prove, however, far more useful than problematic.  Please report bugs or feature requests.
+      Fixed Bug 64.  Structs with fields containing immutable reference types as fields were being incorrectly identified as not being vault-safe when those fields were not read-only.  Since structs are value types and the type field is immutable, there is no danger of a data race when one retains a copy of such a protected resource after releasing a lock.  The analyzer was fixed to account for this.  Unit tests were added to confirm the fix and detect future regressions on this issue.  The Project description was updated to reflect this fix and explain Bug 64.
 
-    Updated Project Description PDF.  Updated README.md.
+      Updated Project Description PDF.  Updated README.md.
+
+      RELEASE NOTES VERSION 0.1.5.0:
+
+      This is the first release not explicitly marked beta or alpha.  This is currently a one-person project produced outside of work hours.  It is almost certainly not bug-free or without flaws, but it has been used extensively enough in the test projects to prove itself useful in managing shared mutable state in complex concurrent state machine scenarios.  I am confident that it will prove useful, despite any residual bugs and flaws.  You should not expect bug free or flawless conformance to specifications.  It will prove, however, far more useful than problematic.  Please report bugs or feature requests.
+
+      Updated Project Description PDF.  Updated README.md.
 </PackageReleaseNotes>
     <Copyright>Copyright © 2019 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.1.5.2</Version>
+    <Version>0.1.5.4</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.1.5.2</AssemblyVersion>
-    <FileVersion>0.1.5.2</FileVersion>
+    <AssemblyVersion>0.1.5.4</AssemblyVersion>
+    <FileVersion>0.1.5.4</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -135,7 +141,7 @@ RELEASE NOTES VERSION 0.1.5.0:
       <Pack>True</Pack>
       <Visible>True</Visible>
     </None>
-    <None Update="DotNetVault Description version 0.1.5.2.pdf">
+    <None Update="DotNetVault Description version 0.1.5.4.pdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
       <Visible>True</Visible>
