--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.2.1.9-alpha</PackageVersion>
+    <PackageVersion>0.2.1.22-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -29,29 +29,21 @@
 
       A full project description is included in "DotNetVault Description.pdf".  Source code, example projects, unit tests, stress test and quick start guide on GitHub.
 </Description>
-    <PackageReleaseNotes>
-      RELEASE NOTES VERSION 0.2.1.9-alpha
+    <PackageReleaseNotes>RELEASE NOTES VERSION 0.2.1.22-beta
 
-      This release contains MAJOR feature updates but is still considered unstable alpha.
+     This release adds a ReadWriteStringBuffer vault that provides thread-safe readonly, upgradable readonly and writable access to a StringBuilder object.  It also (when binaries or source retrieved from GitHub) includes the "Clorton Game" which demonstrates usage of the readwrite vault and provides a stress test to validate its functionality.
 
-      Major new feature: vaults with varying underlying synchronization mechanisms.  You may now chose lock=free atomics (only mechanism before), the .NET standard Monitor.Enter (used by C# lock statement) or ReaderWriterLockSlim.  Because these vaults have a compatible (at compile-time) API, you can easily switch between synchronization mechanisms without any extensive refactoring required.  Also, the new vault based on ReaderWriterLock slim allows for shared readonly locks, upgradable readonly locks and exclusive read-write locks.  If you are coming from an old version of this project, you may need to refactor in some places as their are a significant number of small breaking changes.  It should, however, be a quick and painless process.
-    
-      Fixed Bug 76.  Illegal references to non-vault-safe types inside mutable vault's locked resource objects delegates where not being detected in the case of local functions or using anonymous function syntax. 
-
-      More unit tests.  There are now two unit test projects included.  The older one (DotNetVault.Test) tests the functionality of the built-in static analyzer.  The newer unit test project (VaultUnitTests) tests the functionality and synchronization mechanisms provided for the vaults.  It may also serve, in addition to the pre-existing sample code projects, as an introduction to this library.
-
-      Documentation (including "DotNetVault Description.pdf") updated to reflect changes.
-  </PackageReleaseNotes>
+"DotNetVault.Description.pdf" updated to reflect changes.</PackageReleaseNotes>
     <Copyright>Copyright © 2019-2020 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.2.1.9</Version>
+    <Version>0.2.1.22</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.2.1.9</AssemblyVersion>
-    <FileVersion>0.2.1.9</FileVersion>
+    <AssemblyVersion>0.2.1.22</AssemblyVersion>
+    <FileVersion>0.2.1.22</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
