--- a/ExampleLaundryMachine/LaundryMachine/LaundryMachine.csproj
+++ b/ExampleLaundryMachine/LaundryMachine/LaundryMachine.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.1.9-alpha" />
+    <PackageReference Include="DotNetVault" Version="0.2.1.22-beta" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
   </ItemGroup>
 
