--- a/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
+++ b/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.1.9-alpha" />
+    <PackageReference Include="DotNetVault" Version="0.2.1.22-beta" />
   </ItemGroup>
 
   <ItemGroup>
