--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.2.1.22-beta</PackageVersion>
+    <PackageVersion>0.2.2.1-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -29,21 +29,25 @@
 
       A full project description is included in "DotNetVault Description.pdf".  Source code, example projects, unit tests, stress test and quick start guide on GitHub.
 </Description>
-    <PackageReleaseNotes>RELEASE NOTES VERSION 0.2.1.22-beta
+    <PackageReleaseNotes>
+      RELEASE NOTES VERSION 0.2.2.1-beta:
 
-     This release adds a ReadWriteStringBuffer vault that provides thread-safe readonly, upgradable readonly and writable access to a StringBuilder object.  It also (when binaries or source retrieved from GitHub) includes the "Clorton Game" which demonstrates usage of the readwrite vault and provides a stress test to validate its functionality.
+        A BigValueListVault added, providing a vault protecting a list-like collection, especially suited for large value types. 
 
-"DotNetVault.Description.pdf" updated to reflect changes.</PackageReleaseNotes>
+        Unit tests added, including a stress test called Cafe Babe game.  The Cafe Babe game is a unit test and stand-alone console-driven stress testing utility.
+
+        "DotNetVault.Description.pdf" updated to reflect changes.
+</PackageReleaseNotes>
     <Copyright>Copyright © 2019-2020 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.2.1.22</Version>
+    <Version>0.2.2.1</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.2.1.22</AssemblyVersion>
-    <FileVersion>0.2.1.22</FileVersion>
+    <AssemblyVersion>0.2.2.1</AssemblyVersion>
+    <FileVersion>0.2.2.1</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
